# Wave

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  Dockerfile  PROJECT_SCTRUCTURE.txt  README.md  biome.json  bun.lockb  package.json  turbo.json
apps/wave-backend/: README.md  package.json  turbo.json
apps/wave-frontend/: index.html  package.json  svelte.config.js  tailwind.config.ts  turbo.json
receiving_test/: README.md  pubspec.yaml
receiving_test/lib/: main.dart
receiving_test/linux/: CMakeLists.txt  my_application.cc
receiving_test/test/: widget_test.dart
receiving_test/web/: index.html  manifest.json
receiving_test/windows/: CMakeLists.txt
sms_test/: .flutter-plugins-dependencies  pubspec.yaml
sms_test/lib/: background_sms_handler.dart  global.dart  main.dart  sms_receiver.dart
test/: pubspec.yaml
test/lib/: main.dart
test_flutter_sms/: .flutter-plugins-dependencies  pubspec.yaml
test_telephony/: pubspec.yaml
test_telephony/lib/: main.dart
wave_backend/: Cargo.toml  messaging_app.db
wave_backend/src/: config.rs  main.rs  websocket.rs
wave_backend/src/db/: db_operations.rs  mod.rs  models.rs
wave_backend/src/handlers/: message_handler.rs  mod.rs
wave_backend/src/models/: message.rs
wave_backend/src/redis_helper/: mod.rs
wave_backend/src/routes/: mod.rs
wave_backend/src/routes/messages/: create_message.rs  get_messages.rs  mod.rs
wave_frontend/: README.md  pubspec.yaml
wave_frontend/lib/: main.dart
wave_frontend/linux/: CMakeLists.txt  my_application.cc
wave_frontend/web/: index.html  (+1 more)
(+84 files in other folders)
