[package]
name = "my_messaging_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
chrono = { version = "0.4.19", features = ["serde"] }
rusqlite = "0.29.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
# actix-cors = "0.6.0-beta.1"
