[package]
name = "my_messaging_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.5.0"
actix = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
chrono = { version = "0.4.19", features = ["serde"] }
rusqlite = "0.29.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
log = "0.4.14"
actix-web-actors = "4.2.0"
rand = "0.8.5"
actix-files = "0.6.2"
env_logger = "0.10.0"
