[package]
name = "wave_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29.0"
redis = "0.23.0"
lazy_static = "1.4.0"
env_logger = "0.10.0"
once_cell = "1.7.2"
